ci(docker): push the generated docker images
Signed-off-by: Xe Iaso <xe@tigrisdata.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,7 @@ jobs:
             ./docker-bake.hcl
           # Uses the default group in docker-bake.hcl which targets "www" (push=true)
           targets: default
+          push: true
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
